fix quote title spacing

--- a/sass/module/_post-formats.scss
+++ b/sass/module/_post-formats.scss
@@ -49,6 +49,7 @@
 
 	.entry-content {
 		padding: 2.625em;
+		padding-top: 0;
 	}
 }
 
@@ -212,6 +213,7 @@
 
 		.entry-content {
 			padding: 1.387em;
+			padding-top: 0;
 		}
 	}
 
@@ -240,6 +242,7 @@
 
 		.entry-content {
 			padding: 2.125em;
+			padding-top: 0;
 		}
 	}
 
